--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,14 @@
   max-width: 100px;
   max-height: 100px;
 }
+
+.tamañoPopover {
+  width: 200px;
+  height: 200px;
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.colorPopover {
+  background-color: #00aae3;
+}
